# ParkWise

./: Makefile  Makefile.in  config.status  function.h  parking2.glade  parking2.glade.bak
autom4te.cache/: output.0  requests
projetf3/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  parking2.glade  parking2.gladep.bak
projetf3/autom4te.cache/: requests  traces.0  traces.1
projetf3/po/: Makefile  Makefile.in
projetf3/src/: Makefile  Makefile.am  Makefile.in  admin.txt  affectations.txt  callbacks.c  callbacks.h  interface.c  interface.c.bak  interface.h.bak  main.c  projetf2  services.txt  styles.css
src/: Makefile  Makefile.am  Makefile.in  affectations.txt  agent.c  agent.h  agent.txt  agentParking1.txt  callbacks.c  callbacks.h  citoyen.c  citoyen.h  citoyen.txt  facture.txt  gererParking.c  interface.c  interface.c.bak  interface.h.bak  main.c  projetf2  reservation.txt  services.c  services.h
src/.deps/: agent.Po  callbacks.Po  citoyen.Po  services.Po
